Terminate support for Python 3.3 (EOL in 2018)
Signed-off-by: Joffrey F <joffrey@docker.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ appdirs==1.4.3
 asn1crypto==0.22.0
 backports.ssl-match-hostname==3.5.0.1
 cffi==1.10.0
-cryptography==1.9; python_version == '3.3'
-cryptography==2.3; python_version > '3.3'
+cryptography==2.3
 docker-pycreds==0.4.0
 enum34==1.1.6
 idna==2.5
@@ -17,5 +16,5 @@ pypiwin32==219; sys_platform == 'win32' and python_version < '3.6'
 pypiwin32==223; sys_platform == 'win32' and python_version >= '3.6'
 requests==2.20.0
 six==1.10.0
+urllib3==1.24.1
 websocket-client==0.40.0
-urllib3==1.21.1; python_version == '3.3'
